Adminn page and about

--- a/skeleton.html
+++ b/skeleton.html
@@ -11,6 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
     <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
 
@@ -71,7 +72,39 @@
 
     <section id="consult">Consult online</section>
     <section id="question">Ask a question</section>
-    <section id="about">About us</section>
+    <section id="about">
+        <main>
+            <div class="mission">
+              <h2>Our Mission</h2>
+              <p>Our mission is to bridge the gap between patients and doctors by providing a seamless and efficient appointment booking experience. We aim to empower individuals to take control of their health by offering a convenient way to connect with healthcare providers.</p>
+            </div>
+            <div class="offer">
+                <h2>What We Offer</h2>
+                <ul>
+                  <li><strong>Easy Appointment Booking:</strong> Our intuitive platform allows users to quickly find and book appointments with doctors across various specialties.</li>
+                  <li><strong>Comprehensive Doctor Profiles:</strong> We provide detailed profiles for each doctor, including their specialties and availability helping users make informed decisions.</li>
+                  <li><strong>Flexible Scheduling:</strong> Whether you need to book an urgent appointment or plan a routine check-up, our flexible scheduling options cater to your needs.</li>
+                  <li><strong>Secure and Confidential:</strong> We prioritize the security and confidentiality of your personal information, ensuring a safe environment for all interactions.</li>
+                </ul>
+              </div>
+              <div class="commitment">
+                <h2 class="bruh">Our Commitment to Quality</h2>
+                <p>At <strong>Medicare</strong>, we are committed to maintaining the highest standards of quality and excellence in healthcare services. We partner with reputable medical professionals and healthcare facilities to ensure that our users receive top-notch care.</p>
+              </div>
+              
+              <div class="contact">
+                <div class="contact-header">
+                  <h2>Get in Touch</h2>
+                  <p>Have questions or feedback? We'd love to hear from you! Feel free to reach out to our team for assistance.</p>
+                </div>
+                <div class="contact-info">
+                  <strong><i class="fa fa-envelope"></i> admin12@gmail.com</strong> or
+                  <strong><i class="fa fa-phone"></i> +91 9834567890</strong>
+                </div>
+              </div>       
+          </main>
+
+    </section>
 
     
     <div class="image-container">
